--- a/minecraft_version_api/release.json
+++ b/minecraft_version_api/release.json
@@ -1,8 +1,47 @@
 {
   "schema_version": 7,
   "id": "minecraft_version_api",
-  "latest_version": "1.1.0",
+  "latest_version": "1.1.1",
   "releases": [
+    {
+      "url": "https://github.com/Ivan-1F/MinecraftVersionAPI/releases/tag/v1.1.1",
+      "name": "MinecraftVersionAPI v1.1.1",
+      "tag_name": "v1.1.1",
+      "created_at": "2022-08-27T15:58:04Z",
+      "assets": [
+        {
+          "name": "MinecraftVersionAPI-v1.1.1.mcdr",
+          "size": 3125,
+          "download_count": 106,
+          "created_at": "2022-08-27T15:59:41Z",
+          "browser_download_url": "https://github.com/Ivan-1F/MinecraftVersionAPI/releases/download/v1.1.1/MinecraftVersionAPI-v1.1.1.mcdr"
+        }
+      ],
+      "description": "## Fixes\r\n\r\n- Fixed the dependencies on `mcdreforged` and `parse`",
+      "prerelease": false,
+      "parsed_version": "1.1.1",
+      "meta": {
+        "schema_version": 3,
+        "id": "minecraft_version_api",
+        "name": "Minecraft Version API",
+        "version": "1.1.1",
+        "repository": "https://github.com/Ivan-1F/MinecraftVersionAPI",
+        "link": "https://github.com/Ivan-1F/MinecraftVersionAPI",
+        "authors": [
+          "Ivan1F"
+        ],
+        "dependencies": {
+          "mcdreforged": ">=2.0.0"
+        },
+        "requirements": [
+          "parse"
+        ],
+        "description": {
+          "en_us": "A api plugin to get the Minecraft server version",
+          "zh_cn": "一个用于获取 Minecraft 服务端版本的 API 插件"
+        }
+      }
+    },
     {
       "url": "https://github.com/Ivan-1F/MinecraftVersionAPI/releases/tag/v1.1.0",
       "name": "MinecraftVersionAPI v1.1.0",
