--- a/hooks/release.json
+++ b/hooks/release.json
@@ -1,8 +1,45 @@
 {
   "schema_version": 7,
   "id": "hooks",
-  "latest_version": "2.0.2",
+  "latest_version": "2.1.0",
   "releases": [
+    {
+      "url": "https://github.com/OptiJava/hooks/releases/tag/v2.1.0",
+      "name": "hooks v2.1.0",
+      "tag_name": "v2.1.0",
+      "created_at": "2023-07-08T07:00:08Z",
+      "assets": [
+        {
+          "name": "hooks-v2.1.0.mcdr",
+          "size": 16484,
+          "download_count": 0,
+          "created_at": "2023-07-08T07:08:22Z",
+          "browser_download_url": "https://github.com/OptiJava/hooks/releases/download/v2.1.0/hooks-v2.1.0.mcdr"
+        }
+      ],
+      "description": "# Change Log\r\n\r\n## Changes\r\n1.add setting debug, set it to true to print more logs\r\n2.add command run_command to run a task but don't create this task\r\n3.more suggestions!\r\n\r\n**Full Changelog**: https://github.com/OptiJava/hooks/compare/v2.0.2...v2.1.0",
+      "prerelease": false,
+      "parsed_version": "2.1.0",
+      "meta": {
+        "schema_version": 3,
+        "id": "hooks",
+        "name": "hooks",
+        "version": "2.1.0",
+        "repository": "https://github.com/OptiJava/hooks",
+        "link": "https://github.com/OptiJava/hooks",
+        "authors": [
+          "OptiJava"
+        ],
+        "dependencies": {
+          "mcdreforged": ">=2.9.0"
+        },
+        "requirements": [],
+        "description": {
+          "en_us": "Allow MCDR to trigger custom scripts under specific conditions.",
+          "zh_cn": "让MCDR按照指定的规则自动触发脚本，全自动执行任务"
+        }
+      }
+    },
     {
       "url": "https://github.com/OptiJava/hooks/releases/tag/v2.0.2",
       "name": "hooks v2.0.2",
