--- a/smart_servertime/release.json
+++ b/smart_servertime/release.json
@@ -164,6 +164,46 @@
       }
     },
     {
+      "url": "https://github.com/kmcsr/smart_servertime_mcdr/releases/tag/v1.2.1",
+      "name": "v1.2.1",
+      "tag_name": "v1.2.1",
+      "created_at": "2022-11-20T20:00:31Z",
+      "assets": [
+        {
+          "name": "SmartServerTime-v1.2.1.mcdr",
+          "size": 17895,
+          "download_count": 5,
+          "created_at": "2022-11-20T20:00:33Z",
+          "browser_download_url": "https://github.com/kmcsr/smart_servertime_mcdr/releases/download/v1.2.1/SmartServerTime-v1.2.1.mcdr"
+        }
+      ],
+      "description": "N/A",
+      "prerelease": false,
+      "parsed_version": "1.2.1",
+      "meta": {
+        "schema_version": 3,
+        "id": "smart_servertime",
+        "name": "SmartServerTime",
+        "version": "1.2.1",
+        "repository": "https://github.com/kmcsr/smart_servertime_mcdr",
+        "link": "https://github.com/kmcsr/smart_servertime_mcdr",
+        "authors": [
+          "zyxkad"
+        ],
+        "dependencies": {
+          "mcdreforged": ">=2.0.0",
+          "kpi": ">=1.2.0",
+          "delayexe": ">=1.2.1",
+          "loginproxy": ">=0.3.3"
+        },
+        "requirements": [],
+        "description": {
+          "en_us": "A Minecraft Auto Start/Stop Plugin",
+          "zh_cn": "一个Minecraft自动停起服务器插件"
+        }
+      }
+    },
+    {
       "url": "https://github.com/kmcsr/smart_servertime_mcdr/releases/tag/v1.2.0",
       "name": "v1.2.0",
       "tag_name": "v1.2.0",
